# discord-uwu-webhook

./: Cargo.toml  README.md
src/: main.rs
