[package]
name = "discord-uwu-webhook"
version = "1.0.0"
authors = ["bs2kbs2k <bs2k@naver.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bs2kbs2k/discord-uwu-webhook"

[dependencies]
uwuify = "0.2.1"
serenity = {version = "0.10.4", default-features = false, features = ["builder", "client", "gateway", "model", "http", "cache", "rustls_backend"]}
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
serde_json = "1.0.64"
